# biblioteca

./: README.md  pyproject.toml
biblioteca/: settings.py  urls.py
prestamos/: forms.py  models.py  urls.py  views.py
prestamos/migrations/: 0001_initial.py
prestamos/templates/prestamos/: anadir_libro.html  autor_creado.html  crear_autor.html  crear_prestamo.html  crear_usuario.html  detalle_autor.html  detalle_libro.html  devolver_libro.html  index.html  libro_creado.html  libro_devuelto.html  lista_autores.html  lista_libros.html  lista_prestamos.html  lista_usuarios.html  prestamo_creado.html  usuario_creado.html
static/css/: estilos.css
templates/: base_generic.html
